fix(api): db health check
